<resources>
    <string name="app_name">Calendar App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logo_text">Calendar Scheduler</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_classes">Classes</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_exams">Exams</string>
    <string name="menu_todo">To-do</string>
    <string name="menu_notifs">Notifications</string>
    <string name="enter_text">Enter course name, time, and instructor
    </string>
    <string name="add_class_button">Add class!</string>
    <string name="courseHint">Course Name (Ex: CS2340)</string>
    <string name="timeHint">Time (Ex: 8:00 AM)</string>
    <string name="instructorHint">Instructor (Ex: Dr. Feijoo)</string>
    <string name="add_course">Add Course</string>
    <string name="titleHint">Assignment Title</string>
    <string name="dueHint">Due Date (yyyy-MM-dd)</string>
    <string name="addButton">Add!</string>
    <string name="examDateHint">Exam Date (Ex: yyyy-MM-dd)</string>
    <string name="examTimeHint">Exam Time (Ex: 8:00 AM)</string>
    <string name="examLocationHint">Exam Location</string>
</resources>