<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/classes"
            android:icon="@drawable/classes"
            android:title="@string/menu_classes" />
        <item
            android:id="@+id/assignments"
            android:icon="@drawable/assignments"
            android:title="@string/menu_assignments" />
        <item
            android:id="@+id/exams"
            android:icon="@drawable/exams"
            android:title="@string/menu_exams" />
        <item
            android:id="@+id/todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/menu_todo"
            android:icon="@drawable/todo"/>
    </group>
</menu>