<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/editExamCourseDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courseHint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editExamDateDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/examDateHint"
        android:inputType="date"/>

    <EditText
        android:id="@+id/editExamTimeDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/examTimeHint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editExamLocationDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/examLocationHint"
        android:inputType="text"/>
</LinearLayout>
