<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/classes">

    <fragment
        android:id="@+id/classes"
        android:name="com.example.calendarapp.ui.home.HomeFragment"
        android:label="@string/menu_classes"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/assignments"
        android:name="com.example.calendarapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_assignments"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/exams"
        android:name="com.example.calendarapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_exams"
        tools:layout="@layout/fragment_slideshow" />
</navigation>