<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editAssignmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleHint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editAssignmentDue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dueHint"
        android:inputType="date"/>

    <EditText
        android:id="@+id/editAssignmentCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courseHint"
        android:inputType="text"/>

</LinearLayout>
