<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/editCourseNameDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courseHint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTimeDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timeHint"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editInstructorDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instructorHint"
        android:inputType="text"/>
</LinearLayout>
