<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.AssignmentsFragment">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/titleHint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editDue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editName"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:hint="@string/dueHint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editDueTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDue"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:hint="@string/courseHint"
        android:inputType="text" />

    <Button
        android:id="@+id/addAssignmentsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editDueTime"
        android:layout_marginTop="16dp"
        android:text="Add!"/>

    <ListView
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/addAssignmentsButton"
        android:layout_marginTop="0dp"/>
</RelativeLayout>